--- a/templates/shares.conf.j2
+++ b/templates/shares.conf.j2
@@ -4,7 +4,7 @@
 {% if share.comment is defined %}
   comment = {{ share.comment }}
 {% endif %}
-  path = {{ share.path | default([samba_shares_root,share.name] | join('/')) }}
+  path = {{ share.path | default([samba_shares_root_directory,share.name] | join('/')) }}
   public = {{ share.public | default('no') }}
 {% if share.valid_users is defined %}
   valid users = {{ share.valid_users }}
